# langchain-notebook-scratchpad

./: README.md  conda.yaml  pyproject.toml
src/plan_execute/: plan-and-execute-with-persistence.ipynb  plan-and-execute.ipynb
src/state_model/: persistence.ipynb  state-model-with-persistence.ipynb
