[tool.poetry]
name = "langchain-notebook-scratchpad"
version = "0.1.0"
description = ""
authors = ["Kylie Blake McNaughton <kylieblake@robocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
jupyter = "^1.0.0"
langgraph = "^0.0.38"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
